<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/actionBarContainer"
        android:name="ru.ok.itmo.example.view.SimpleActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/action_bar_simple" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMessages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/disabled"
        app:layout_constraintBottom_toTopOf="@id/inputPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBarContainer">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputPanel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/imageButtonEmoji"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:contentDescription="@string/content_description_emoji_button"
            android:paddingLeft="8dp"
            android:src="@drawable/ic_smile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_message_text"
            android:inputType="text"
            android:textColor="@color/secondary"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageButtonAttachment"
            app:layout_constraintStart_toEndOf="@id/imageButtonEmoji"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButtonAttachment"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:paddingLeft="4dp"
            android:contentDescription="@string/content_description_attachment_button"
            android:src="@drawable/ic_attach"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageButtonVoice"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/imageButtonVoice"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:paddingRight="4dp"
            android:background="@color/white"
            android:contentDescription="@string/content_description_voice_button"
            android:src="@drawable/ic_microphone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyChatPanel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/welcome_panel"
        android:padding="24dp"
        android:layout_width="203dp"
        android:layout_height="293dp">

        <TextView
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_ui_display_semibold"
            android:textFontWeight="700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_messages" />

        <TextView
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_first" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description_sticker"
            android:layout_height="wrap_content"
            android:src="@drawable/sticker"
            tools:layout_editor_absoluteY="737dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>