<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    tools:context=".view.StartedFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="154.5dp"
        app:layout_constraintBottom_toTopOf="@id/buttonPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/buttonPhone"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_started_phone"
        android:drawableStart="@drawable/ic_smartphone"
        android:drawablePadding="8dp"
        android:paddingHorizontal="48dp"
        android:text="@string/button_started_phone"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_started_login"
        android:paddingHorizontal="48dp"
        android:text="@string/button_started_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/textViewPrivacyPolicy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:alpha="0.7"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-1sp"
        android:text="@string/privacy_policy"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>